# bidding

auth/: .env_ignore  Cargo.toml  configuration.yaml  init_db.sh  readme.md
auth/migrations/: 20231018011004_create_auth_table.sql
auth/src/: configuration.rs  lib.rs  main.rs
auth/src/handlers/: auth.rs
auth/src/middlewares/: auth.rs
auth/src/models/: mod.rs  user.rs
auth/src/routes/: auth.rs
auth/tests/: auth.rs
migrations/: 000001_auth.up.sql
