[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]] # double brackets means it is an array. we can have one lib but we can have multiple bins
name = "auth"
path = "src/main.rs"

[features]
default = ["async-std-rt"]
async-std-rt = ["async-std", "sqlx/runtime-async-std-native-tls"]
tokio-rt = ["sqlx/runtime-tokio-native-tls"]

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
config = "0.13.3"
dotenv = "0.15.0"
env-file-reader = "0.3.0"
hyper = "0.14.27"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.6.3", features = ["postgres", "time"] }
tokio = {version = "1.33.0", features = ["full"]}
tower = "0.4.13"
async-std = { version = "1.10.0", features = ["attributes"], optional = true }
